# Flipkart-Recommender

./: Dockerfile  pyproject.toml
flipkart_product_recommender_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
